<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/emptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:text="@string/no_data"
        android:textColor="@android:color/black"
        android:padding="16dp"
        android:textSize="16sp"
        />
</merge>